UIフレームワーク追加

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="BlazorHyblid-ImageEditor.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,6 +27,7 @@
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </body>
 
 </html>
