--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -28,6 +28,19 @@
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
+
+    <script>
+        window.setImage = async (imageElementId, imageStream) => {
+            const arrayBuffer = await imageStream.arrayBuffer();
+            const blob = new Blob([arrayBuffer]);
+            const url = URL.createObjectURL(blob);
+            const image = document.getElementById(imageElementId);
+            image.onload = () => {
+                URL.revokeObjectURL(url);
+            }
+            image.src = url;
+        }
+    </script>
 </body>
 
 </html>
