--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="BlazorHyblid-ImageEditor.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
-    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script>
         window.setImage = async (imageElementId, imageStream) => {
